<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@android:color/white">
    
    <Button
        android:id="@+id/main_login_button1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_above="@+id/listSpec"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/main_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/listSpec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/no_acc" />

    <EditText
        android:id="@+id/reg_username_txt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/main_login_button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="92dp"
        android:background="@drawable/username"
        android:ems="10"
        android:hint="@string/username"
        android:paddingLeft="10dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_firstname_txt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/main_login_button1"
        android:layout_alignLeft="@+id/reg_username_txt"
        android:layout_marginBottom="42dp"
        android:background="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/tvEditHospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reg_username_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

</RelativeLayout>