<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DoctorMainpageActivity" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/user"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/patient_welcome"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.75"
                android:textColor="@android:color/black"
                android:text="@string/welcomed"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_marginBottom="80dp"
        android:text="@string/logout" />

    <Button
        android:id="@+id/patient_appt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogout"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignRight="@+id/btnLogout"
        android:text="@string/appointments" />

    <Button
        android:id="@+id/btnEditdoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/patient_appt"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignRight="@+id/patient_appt"
        android:text="@string/editprof" />

</RelativeLayout>